hero-header-section

--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container">
+  <div class="container-header">
     <div class="header-nav">
       <a class="header-logo" href="#">
         <svg class="header-logo__svg" width="199px" height="50px">
@@ -15,10 +15,14 @@
             <a class="nav__list-item" href="#about-section.html">About us</a>
           </li>
           <li>
-            <a class="nav__list-item" href="#">How it’s made?</a>
+            <a class="nav__list-item" href="#about-section.html"
+              >How it’s made?</a
+            >
           </li>
           <li>
-            <a class="nav__list-item" href="#">Our products</a>
+            <a class="nav__list-item" href="#products-section.html"
+              >Our products</a
+            >
           </li>
           <li>
             <a class="nav__list-item" href="#">Contact</a>
@@ -71,21 +75,21 @@
           </ul>
         </div>
       </div>
-      <div class="hero-milk-cup">
+      <div class="hero-milk-cont">
         <div>
           <picture>
             <source
               media="screen and (max-width:767px)"
-              srcset="images\milk-cup-t@x1.png, images\milk-cup-t@x2.png 2x"
+              srcset="images\milk-cup-t.png, images\milk-cup-t@x2.png 2x"
             />
             <source
               media="screen and (max-width:1200px)"
-              srcset="images\milk-cup-d@x1.png, images\milk-cup-d@x2.png 2x"
+              srcset="images\milk-cup-d.png, images\milk-cup-d@x2.png 2x"
             />
             <img
-              class="hero-milk-cup__image-mod"
+              class="hero-milk-cont__image-mod"
               width="270"
-              src="./images/milk-cup-d@x1.png"
+              src="./images/milk-cup-d.png"
               alt="Christopher Walker"
             />
           </picture>
@@ -99,44 +103,50 @@
           </div>
           <div class="hero-btn-milk-mod">
             <button class="hero-btn-milk">
-              <svg class="hero-btn-milk__svg" width="4px" height="8px">
-                <use href="./images/sprite.svg#icon-arrow-right-4"></use>
+              <svg class="hero-btn-milk__svg" width="15px" height="20px">
+                <use href="./images/sprite.svg#arrow-right"></use>
               </svg>
             </button>
           </div>
         </div>
-        <picture class="ice-cup">
-          <source
-            media="screen and (max-width:480px)"
-            srcset="images\ice-cup-m@x1.png, images\ice-cup-m@x2.png 2x"
-          />
-          <source
-            media="screen and (max-width:767px)"
-            srcset="images\ice-cup-t@x1.png, images\ice-cup-t@x2.png 2x"
-          />
-          <source
-            media="screen and (max-width:1200px)"
-            srcset="images\ice-cup-d@x1.png, images\ice-cup-d@x2.png 2x"
-          />
-          <img
-            class="ice-cup__image"
-            width="270"
-            src="./images/ice-cup-d@x1.png"
-            alt="ice-cup"
-          />
-        </picture>
-        <picture>
-          <source
-            media="screen and (max-width:480px)"
-            srcset="images\eat-ice-t@x1.png, images\eat-ice-t@x2.png 2x"
-          />
-          <source
-            media="screen and (max-width:767px)"
-            srcset="images\eat-ice-d@x1.png, images\eat-ice-d@x2.png 2x"
-          />
-          <img width="270" src="./images/eat-ice-d@x1.png" alt="ice" />
-        </picture>
       </div>
     </section>
+    <picture class="ice-cup">
+      <source
+        media="screen and (max-width:480px)"
+        srcset="images\ice-cup-m.png, images\ice-cup-m@x2.png 2x"
+      />
+      <source
+        media="screen and (max-width:767px)"
+        srcset="images\ice-cup-t.png, images\ice-cup-t@x2.png 2x"
+      />
+      <source
+        media="screen and (max-width:1200px)"
+        srcset="images\ice-cup-d.png, images\ice-cup-d@x2.png 2x"
+      />
+      <img
+        class="ice-cup__image"
+        width="270"
+        src="./images/ice-cup-d.png"
+        alt="ice-cup"
+      />
+    </picture>
+    <picture class="eat-ice">
+      <source
+        media="screen and (max-width:480px)"
+        srcset="images\eat-ice-t.png, images\eat-ice-t@x2.png 2x"
+      />
+      <source
+        media="screen and (max-width:767px)"
+        srcset="images\eat-ice-d.png, images\eat-ice-d@x2.png 2x"
+      />
+      <img
+        class="eat-ice__image"
+        width=""
+        src="./images/eat-ice-d.png"
+        alt="ice"
+      />
+    </picture>
+    <div class="hero-eclips"></div>
   </div>
 </header>
