--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -8,7 +8,7 @@
   background-color: $primaryBackgroundColor;
 }
 
-.container {
+.container-header {
   width: 1200px;
   margin: auto;
   height: 664px;
@@ -39,10 +39,13 @@
     color: $whiteColor;
     font-size: 16px;
     font-weight: 700;
+    z-index: 5;
+    position: relative;
   }
 
   &__list-item:hover {
     color: $primaryColor;
+    transition: $main-transition-timing-function;
   }
 }
 
@@ -63,6 +66,12 @@
   text-align: center;
   color: $primaryColor;
   margin-left: 141px;
+
+  &:hover {
+    background-color: #ecebeb;
+    cursor: pointer;
+    transition: $main-transition-timing-function;
+  }
 
   &__svg {
     margin-left: 12px;
@@ -137,6 +146,7 @@
     background-color: $primaryColor;
     cursor: pointer;
     color: $whiteColor;
+    transition: $main-transition-timing-function;
   }
 
   &__list-second {
@@ -157,6 +167,7 @@
     background-color: $primaryColor;
     cursor: pointer;
     color: $whiteColor;
+    transition: $main-transition-timing-function;
   }
 }
 
@@ -221,14 +232,35 @@
   width: 26px;
   border-radius: 50%;
   border: 0;
+  display: flex;
+
+  &:hover{
+    background-color: $primaryColor;
+  }
+  
+  &__svg {
+    fill: $primaryColor;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__svg:hover{
+    transform: rotate(90deg);
+    fill: $whiteColor;
+  }
+
 }
 
 .hero-btn-milk-mod {
   padding-top: 20px;
 }
 
-.hero-milk-cup {
+.hero-milk-cont {
   display: flex;
+  width: 413px;
+  margin: 0;
 
   &__image-mod {
     height: 216px;
@@ -239,15 +271,37 @@
 }
 
 .ice-cup {
-  left: 976px;
+  margin-left: 636px;
   top: 108px;
   position: absolute;
+  z-index: 5;
 
   &__image {
     height: 557px;
     width: 236px;
-    left: 636px;
-    top: 108px;
     border-radius: 0px;
   }
+}
+
+.eat-ice {
+  position: absolute;
+  margin-left: 920px;
+  top: 423px;
+  z-index: 5;
+
+  &__image {
+    height: 241px;
+    width: 304px;
+    border-radius: 0px;
+  }
+}
+
+.hero-eclips {
+  height: 534px;
+  width: 534px;
+  margin-left: 557px;
+  top: 54px;
+  border-radius: 50%;
+  background-color: $secondaryColor;
+  position: absolute;
 }
