--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,12 @@
 <header class="header-container">
-  <div class="container">
+  <div class="container " >
     <!-- HeaderSection -->
     <div class="nav-bar">
       <div class="logo">
-        <svg width="199px" height="50px">
+        <a href="#"><svg width="199px" height="50px">
           <use href="./images/icons.svg#icon-logo"></use>
-        </svg>
+        </svg></a>
+        
       </div>
       <nav class="nav menu">
         <ul class="nav__grid">
@@ -27,6 +28,7 @@
         aria-expanded="false"
         type="button"
         data-modal-open
+        data-modal-open="modal1"
       >
         Buy now
         <svg width="4px" height="8px" class="nav__icon">
@@ -93,10 +95,13 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et
           </p>
+          <p id="myDIV" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, voluptates?</p>
+          
           <img
             src="./images/header-arrow-right-D.jpg"
             alt="right arrow"
             class="left-list__icon"
+            onclick="myFunction()"
           />
         </div>
       </li>
@@ -118,7 +123,7 @@
     class="mobile-button"
     aria-expanded="false"
     type="button"
-    data-modal-open
+    data-modal-open="modal2"
   >
     Buy now
     <svg width="4px" height="8px" class="nav__icon">
@@ -193,4 +198,5 @@
     </form>
   </div>
 </div>
+
 
