about-corectie-foto-background

--- a/src/sass/components/_about-section.scss
+++ b/src/sass/components/_about-section.scss
@@ -2,219 +2,210 @@
 @import 'src/sass/utils/_vars.scss';
 
 .about {
-    background-color: $secondBackgroundColor;
-    padding-top: 60px;
-    background-image: url(../images/sectionbg1ph.png), url(../images/sectionbg1ph@2x.png);
-    background-repeat: no-repeat;
-    background-position: 0% 594px, 100% 594px;
+  background-color: $secondBackgroundColor;
 }
+
 .about__label {
-    font-family: $secondFamily;
-    text-align: center;
-    text-transform: uppercase;
-    color: $secondaryColor;
-    margin-left: 15px;
-    font-weight: 400;
-font-size: 18px;
-line-height: 21px;
-margin-bottom: 32px;
+  font-family: $secondFamily;
+  text-align: center;
+  text-transform: uppercase;
+  color: $secondaryColor;
+  margin-left: 15px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 32px;
 }
 
 .about__title {
-    font-family: $secondFamily;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 34px;
-    line-height: 39px;
-    color: $primaryColor;
+  font-family: $secondFamily;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 39px;
+  color: $primaryColor;
+}
+.about__main {
+  background-image: url(../images/sectionbg.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-
 @media (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-    .about {
-        background-image: url(../images/sectionbg1ph.png);
-    }
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .about {
+    background-image: url(../images/sectionbg1ph.png);
+  }
 }
 
 .about__picture {
-    display: block;
-    margin-bottom: 40px;
+  display: block;
+  margin-bottom: 40px;
 }
 
 .about__img {
-    margin-right: 0px;
-
+  margin-right: 0px;
 }
 
 .about__content {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  max-width: 220px;
+}
+
+.about__content-text {
+  color: $blackColor;
+  margin-bottom: 20px;
+  letter-spacing: normal;
+  width: 100%;
+}
+
+.about__content-additional {
+  color: $mainBrownColor;
+  margin-bottom: 20px;
+  letter-spacing: normal;
+
+  & span {
+    display: block;
+    margin-top: 20px;
+  }
+}
+.about__content-button {
+  width: 176px;
+  height: 44px;
+  text-align: center;
+  color: $primaryColor;
+  background-color: $whiteColor;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  display: flex;
+  border-radius: 22px;
+  border: transparent;
+
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
+}
+
+.about__content-icon {
+  width: 9px;
+  height: 9px;
+  fill: none;
+  stroke: $primaryColor;
+  stroke-width: 2px;
+  justify-content: center;
+  margin-left: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .about .container {
+    display: block;
+    justify-content: center;
+  }
+  .about__label {
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 30px;
+  }
+  .about__title {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 55px;
+    margin-bottom: 40px;
+  }
+  .about__main {
+    display: flex;
+  }
+
+  .about__picture {
+    margin-bottom: 0;
+    margin-right: 32px;
+  }
+
+  .about__img {
+    width: 336px;
+    height: 336px;
+  }
+
+  .about__content {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    list-style: 25px;
+    max-width: 334px;
+  }
+
+  .about__content-text {
+    margin-bottom: 20px;
+  }
+
+  .about__content-additional {
+    & span {
+      display: block;
+      margin-top: 20px;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .about {
+      background-image: url(../images/sectionbg@2x.png);
+    }
+  }
+  .about__main {
+    padding-left: 16px;
+    padding-bottom: 20px;
+    display: flex;
+  }
+
+  .about__picture {
+    margin-right: 0 auto;
+    padding-right: 99px;
+  }
+
+  .about__img {
+    width: 501px;
+    height: 501px;
+  }
+
+  .about__content {
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    max-width: 220px;
-}
+    list-style: 28px;
+    max-width: 463px;
+    margin-right: 121px;
+    padding-top: 90px;
+  }
 
-.about__content-text {
-    color: $blackColor;
-    margin-bottom: 20px;
-    letter-spacing: normal;
-    width: 100%;
-}
+  .about__content-text {
+    margin-bottom: 32px;
+    letter-spacing: 0.04em;
+  }
 
-.about__content-additional {
-    color: $mainBrownColor;
-    margin-bottom: 20px;
-    letter-spacing: normal;
+  .about__content-additional {
+    letter-spacing: 0.04em;
+    margin-bottom: 40px;
 
     & span {
-        display: block;
-        margin-top: 20px;
+      display: block;
+      margin-top: 32px;
     }
-}
-.about__content-button {
-    width: 176px;
-        height: 44px;
-        text-align: center;
-        color: $primaryColor;
-        background-color: $whiteColor;
-        justify-content: center;
-        align-items: center;
-        margin-right: 0px;
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 18px;
-        display: flex;
-        border-radius: 22px;
-    border: transparent;
-
-    &:hover,
-    &:focus {
-        background-color: #ECEBEB;
-    }
-}
-
-.about__content-icon {
-    width: 9px;
-    height: 9px;
-    fill: none;
-    stroke: $primaryColor;
-    stroke-width: 2px;
-    justify-content: center;
-    margin-left: 12px;
-}
-
-@media screen and (min-width:768px) {
-    .about .container {
-        display: block;
-        justify-content: center
-    }
-    .about__label {
-        font-weight: 400;
-        font-size: 26px;
-        line-height: 30px;
-    }
-    .about__title {
-        font-weight: 400;
-        font-size: 48px;
-        line-height: 55px;
-        margin-bottom: 40px;
-    }
-    .about__main {
-        display: flex;
-    }
-
-    .about__picture {
-        margin-bottom: 0;
-        margin-right: 32px;
-    }
-
-    .about__img {
-        width: 336px;
-        height: 336px;
-    }
-
-    .about__content {
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 14px;
-        list-style: 25px;
-        max-width: 334px;
-    }
-
-    .about__content-text {
-        margin-bottom: 20px;
-    }
-
-    .about__content-additional {
-
-
-        & span {
-            display: block;
-            margin-top: 20px;
-        }
-    }
-}
-
-@media screen and (min-width:1280px) {
-    .about {
-        background-image: url(../images/sectionbg.png);
-        background-position: 0% 236px, 100% 236px;
-        background-size: 1200px, 521px;
-
-    }
-    @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-        .about {
-            background-image: url(../images/sectionbg@2x.png);
-        }
-    }
-    .about__main {
-        padding-left: 16px;
-        padding-bottom: 20px;
-        display: flex;
-    }
-
-    .about__picture {
-        margin-right: 0 auto;
-        padding-right: 99px;
-    }
-
-    .about__img {
-        width: 501px;
-        height: 501px;
-    }
-
-    .about__content {
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        list-style: 28px;
-        max-width: 463px;
-        margin-right: 121px;
-        padding-top: 90px;
-    }
-
-    .about__content-text {
-        margin-bottom: 32px;
-        letter-spacing: 0.04em;
-    }
-
-    .about__content-additional {
-        letter-spacing: 0.04em;
-        margin-bottom: 40px;
-
-
-        & span {
-            display: block;
-            margin-top: 32px;
-        }
-    }
+  }
 }
