pozitionare varianta desktop

--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -26,12 +26,15 @@ body {
   border-style: none;
   background-color: $whiteColor;
 }
+
+
 .arrow-button__svg {
   fill: #d41443;
 }
 
 .unstyled-list {
   list-style: none;
+  padding-left: 0;
 }
 
 .container {
