--- a/src/sass/components/_customer-rev-section.scss
+++ b/src/sass/components/_customer-rev-section.scss
@@ -1,4 +1,12 @@
 @import 'src/sass/utils/_vars.scss';
+
+// .container-customer {
+//   width: 100%;
+//   height: 100%;
+//   margin-left: auto;
+//   margin-right: auto;
+//   }
+  
 .customer-review {
   &__container {
     display: flex;
@@ -83,21 +91,20 @@
 @media screen and (min-width: 768px) {
 }
 @media screen and (min-width: 1280px) {
-  .customer-review {
-    &__container {
-      width: 968px;
-    }
+  .customer-rev {
+    padding-left: 116px;
+    padding-right: 116px;
   }
   .customer-review {
     &__rev {
       display: flex;
       flex-direction: column;
       gap: 24px;
+      width: 100%;
     }
     &__rev-container {
       padding: 32px 74px 31px 72px;
       background: #fafafa;
-      width: 968px;
       position: relative;
       transition: box-shadow 150ms $main-transition-timing-function;
       &:hover,
@@ -156,10 +163,11 @@
   }
 
   .customer-reviews__line {
-    width: 85%;
-    height: 42%;
+    width: 84%;
+    height: 43%;
     background-image: repeating-linear-gradient(#e1e1e1 0 1px, #fafafa 0 31px);
     position: absolute;
-    top: 74px;
+    top: 77px;
+    left: 8%;
   }
 }
