--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -166,7 +166,7 @@
     font-weight: 400;
     line-height: 18px;
     letter-spacing: 0em;
-    text-align: center;
+    text-align: center;}
 
   &__list-second:hover {
     background-color: $primaryColor;
