--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -2,7 +2,7 @@
   <div class="container container--modif">
     <p class="products__label">100% natural</p>
     <h2 class="products__title">PRODUCTS</h2>
-    <ul class="products__list">
+    <ul class="products__list unstyled-list">
       <li class="products__list-item">
         <div class="products-cards">
           <h3 class="products-cards__subtitle">ice cream</h3>
