--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -2,18 +2,17 @@
 @import 'src/sass/utils/_vars.scss';
 
 * {
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-  }
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
 
 body {
-    font-family: 'DM Sans', sans-serif;
-    font-weight: 400px;
-    font-style: normal;
-    font-size: 14px;
-     
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 400px;
+  font-style: normal;
+  font-size: 14px;
 }
 
 .arrow-button {
@@ -32,23 +31,22 @@ body {
 
 .unstyled-list {
   list-style: none;
+  padding-inline-start: 0px;
 }
 
 .container {
   width: 480px;
   margin: 0 auto;
 }
- 
 
 @media screen and (min-width: 768px) {
-    .container {
-      width: 768px;
-    }
+  .container {
+    width: 768px;
   }
-  
-  @media screen and (min-width: 1280px) {
-    .container {
-      width: 1280px;
-    }
-  }
+}
 
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+  }
+}
