--- a/src/sass/components/_products-section.scss
+++ b/src/sass/components/_products-section.scss
@@ -1,11 +1,13 @@
 @import 'src/sass/utils/_vars.scss';
 .container--modif {
-    display: flex;
-    flex-direction: column;
-    padding-top: 60px;
-    
-  }
+  display: flex;
+  flex-direction: column;
+  padding-top: 60px;
+}
 .products {
+  padding-left: 20px;
+  padding-right: 20px;
+
   &__label {
     font-family: $secondFamily;
     font-size: 18px;
@@ -31,13 +33,11 @@
     flex-wrap: wrap;
   }
   &__list-item {
-    list-style: none;
     border-radius: 24px;
     background-color: #f0d1a5;
     position: relative;
     margin-bottom: 140px;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 76%;
     &::before {
       content: '';
       display: block;
@@ -106,7 +106,7 @@
   flex-direction: column;
   align-items: center;
   gap: 32px;
-  padding: 160px 32px 40px;
+  padding: 160px 40px 40px;
 
   &__subtitle {
     font-family: $secondFamily;
@@ -122,6 +122,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    margin: 0 auto;
+    margin-bottom: 15px;
 
     &::before {
       content: '...';
@@ -139,12 +141,13 @@
     text-align: center;
     letter-spacing: 0.04em;
     color: $whiteColor;
+    width: 200px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .products {
-        &__list {
+    &__list {
       gap: 16px;
       flex-direction: row;
       flex-wrap: nowrap;
@@ -153,6 +156,8 @@
       margin-bottom: 158px;
     }
     &__list-item {
+      width: auto;
+      margin-bottom: 0px;
       &::before {
         content: '';
         display: block;
@@ -209,18 +214,14 @@
     padding: 118px 32px 40px;
     &__description {
       font-size: 14px;
+      width: 160px;
     }
   }
 }
 @media screen and (min-width: 1280px) {
   .products {
-    .container {
-      display: flex;
-      flex-direction: column;
-      padding-top: 60px;
-      margin: 0 auto;
-      width: 1148px;
-    }
+    padding-left: 16px;
+    padding-right: 16px;
     &__label {
       font-size: 30px;
       line-height: 1.13;
@@ -233,11 +234,15 @@
       margin-bottom: 260px;
       margin-top: 0;
     }
+    &__list {
+      gap: 32px;
+    }
     &__list-item {
       list-style: none;
       border-radius: 24px;
       background-color: #f0d1a5;
       position: relative;
+      width: 100%;
       &::before {
         content: '';
         display: block;
@@ -271,8 +276,9 @@
       &:last-child::before {
         content: '';
         display: block;
-        width: 100%px;
+        width: 100%;
         height: 394px;
+        transform: translateY(-60%);
         background-image: url(/src/images/milkshakes-d.png);
       }
     }
@@ -319,6 +325,7 @@
       font-size: 16px;
       line-height: 176%;
       letter-spacing: 0.04em;
+      width: 245px;
     }
   }
 }
