--- a/src/sass/components/_about-section.scss
+++ b/src/sass/components/_about-section.scss
@@ -27,7 +27,7 @@
   color: $primaryColor;
 }
 .about__main {
-  background-image: url(../images/sectionbg.png);
+  background-image: url(../images/sectionbg1ph.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -35,8 +35,8 @@
 @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
-  .about {
-    background-image: url(../images/sectionbg1ph.png);
+  .about__main {
+    background-image: url(../images/sectionbg1ph@2x.png);
   }
 }
 
@@ -95,6 +95,7 @@
   &:hover,
   &:focus {
     background-color: #ecebeb;
+    cursor: pointer;
   }
 }
 
@@ -109,7 +110,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .about .container {
+  .about {
     display: block;
     justify-content: center;
   }
@@ -163,7 +164,7 @@
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    .about {
+    .about__main {
       background-image: url(../images/sectionbg@2x.png);
     }
   }
