--- a/src/sass/components/_advantages-section.scss
+++ b/src/sass/components/_advantages-section.scss
@@ -1,1 +1,152 @@
- 
+@import '~node_modules/modern-normalize/modern-normalize.css';
+@import 'src/sass/utils/_vars.scss';
+
+.advantages {
+  padding-top: 40px;
+  padding-bottom: 60px;
+  background: $secondBackgroundColor;
+}
+.list {
+  list-style: none;
+}
+.advantages__item {
+  width: 230px;
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  &::before {
+    content: '';
+    display: inline-block;
+    height: 50px;
+    background-repeat: no-repeat;
+    margin: 0;
+    margin-bottom: 16px;
+  }
+}
+
+.advantages__1-item {
+  &::before {
+    content: '';
+    width: 33px;
+    background-image: url(../images/bucket.png);
+  }
+}
+
+.advantages__2-item {
+  &::before {
+    content: '';
+    width: 50px;
+    background-image: url(../images/apples.png);
+  }
+}
+
+.advantages__3-item {
+  &::before {
+    content: '';
+    width: 50px;
+    background-image: url(../images/heart.png);
+  }
+}
+
+.advantages__text {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: 0.02em;
+  color: $blackColor;
+}
+
+.advantages__number {
+  display: block;
+  margin-bottom: 30px;
+  font-family: $secondFamily;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 41px;
+  text-align: left;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $primaryColor;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages {
+    padding-top: 60px;
+    padding-bottom: 64px;
+  }
+
+  .advantages__list {
+    display: flex;
+  }
+
+  .advantages__item {
+    display: block;
+    width: 180px;
+
+    &:not(:last-child) {
+      margin-bottom: 0;
+      margin-right: 20px;
+    }
+
+    &::before {
+      content: '';
+      margin-bottom: 36px;
+    }
+  }
+
+  .advantages__text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .advantages__number {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 55px;
+    text-transform: none;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .advantages {
+    padding-top: 40px;
+    padding-bottom: 120px;
+  }
+
+  .advantages__item {
+    &::before {
+      content: '';
+      margin-bottom: 40px;
+    }
+  }
+  .advantages__item {
+    display: block;
+    width: 400px;
+
+    &:not(:last-child) {
+      margin-bottom: 0;
+      margin-right: 20px;
+    }
+
+    &::before {
+      content: '';
+      margin-bottom: 36px;
+    }
+  }
+  .advantages__text {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 28px;
+    width: 288px;
+  }
+
+  .advantages__number {
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 66px;
+  }
+}
