--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -1,18 +1,23 @@
-body {
-    margin: 0;
-  }
+@media (min-width: 1200px) ,(max-width: 1600px) {
   
-  .container {
-    margin: 0 auto;
-  }
-  
-  .header-section {
+.header-section {
     padding: 0 16px;
     background: #ffb8ca;
     background-repeat: no-repeat;
     background-image:  url("../images/header/header-icecream.png"), url("../images/header/header-elipse.png");
     background-position:  top 100% right 37%, top 40% right 25%;
   }
+  
+  @media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .header-section {
+    
+    background-position:  top 100% right 37%, top 40% right 25%;
+    background-image: url("../images/header/header-icecream@2x.jpg"), url("../images/header/header-elipse@2x.png");
+  }
+}
   
   .header {
     display: flex;
@@ -41,7 +46,13 @@ body {
       display: flex;
       align-items: center;
       color: #ffffff;
-    }
+      text-decoration: none;
+      &:hover,
+      &:focus {
+        color: #D41443;
+        cursor: pointer;
+  }
+}
   
     &__buy-btn {
       font-family: "DM Sans";
@@ -58,12 +69,20 @@ body {
       border-radius: 22px;
       margin: 0 0 0 auto;
       padding: 12px 53px 12px 37px;
+      &:hover,
+      &:focus {
+        background: #ECEBEB;
+        cursor: pointer;
+      }
     }
-  
-    &__btn-icon {
-      margin: 3px 0 0 12px;
+
+    &__menu-btn {
+      background-color: transparent;
+      border:none;
+      visibility: hidden;
     }
   }
+
   
   .hero {
     display: flex;
@@ -95,15 +114,9 @@ body {
     }
   
     &__btn {
-      font-family: "DM Sans";
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 18px;
       display: flex;
       align-items: center;
       text-align: center;
-      color: #ffffff;
       padding: 11px 23px;
       background: #d41443;
       border-radius: 20px;
@@ -111,14 +124,32 @@ body {
     }
   
     &__btn--white {
-      color: #d41443;
       background: #ffffff;
+      &:hover,
+      &:focus {
+        background: #ECEBEB;
+        cursor: pointer;
     }
+  }
+
     &__img {
       display: block;
       margin: 91px 0 -60px 0;
       }
-  }
+  
+      &__link {
+        font-family: "DM Sans";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        color: #ffffff;
+        text-decoration: none;
+        &--red {
+          color: #d41443;
+        }
+      }
+}
   
   .info {
     display: flex;
@@ -149,8 +180,15 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
+      background: #FFFFFF;
+      &:hover,
+      &:focus {
+        background: #ECEBEB;
+        cursor: pointer;
+    }
     }
   }
+  
   
   .sell-point {
     list-style: none;
@@ -190,6 +228,5 @@ body {
       margin: 0;
      
     }
-    
   }
-  
+}
